--- a/index.html
+++ b/index.html
@@ -6,26 +6,37 @@
   </head>
   <body>
 
-
-    <div class="rebecca">
-      &nbsp;&nbsp;&nbsp; <em><a href="https://rebeccaatwood.com/" target="_blank">Rebecca Atwood</a></em>&nbsp;&nbsp;&nbsp;
-    <!-- Struggling with making the first item "Rebecca Atwood" align to the left on the same line? --->
+    <div class="header-menu nav-wrapper">
+       <ul class="main-menu accessibleNav">
+          <li class="grandparent  kids-4">
+             <a href="#" class="nav-link" id="Shop">Shop</a>
+           </li>
+          <li class="child  kids-0">
+             <a href="/pages/about-us" class="nav-link" id="About">About</a>
+          </li>
+          <li class="child  kids-0">
+             <a href="/blogs/from-the-studio" class="nav-link" id="Blog">Blog</a>
+          </li>
+          <li class="child  kids-0">
+             <a href="/pages/book" class="nav-link" id="Books">Books</a>
+          </li>
+          <li class="child  kids-0">
+             <a href="/pages/visit-us" class="nav-link" id="Showroom">Showroom</a>
+          </li>
+          <li class="child  kids-0">
+             <a href="/pages/contact" class="nav-link" id="Contact">Contact</a>
+          </li>
+          <li class="child  kids-0">
+             <a href="/pages/process" class="nav-link" id="Process">Process</a>
+          </li>
+          <li class="cart-text-link">
+             <a href="/cart" class="CartToggle">
+             Bag
+             <span class=" hidden-count " id="nav-cartCountDesktop">(0)</span>
+             </a>
+          </li>
+       </ul>
     </div>
-<ul>
-  <!-- I'm not entirely sure how to go about adding the list options for "shop"
-  as it wasn't something we went over in the lesson? -->
-<div align="right">
-  <!-- Also not sure how to add space without using css? -->
- <a href="#" target="_blank">Shop</a> &nbsp;&nbsp;&nbsp;
- <a href="https://rebeccaatwood.com/pages/about-us" target="_blank">About</a> &nbsp;&nbsp;&nbsp;
- <a href="https://rebeccaatwood.com/pages/process" target="_blank">Process</a> &nbsp;&nbsp;&nbsp;
- <a href="https://rebeccaatwood.com/blogs/from-the-studio" target="_blank">Blog</a> &nbsp;&nbsp;&nbsp;
- <a href="https://rebeccaatwood.com/pages/book" target="_blank">Books</a> &nbsp;&nbsp;&nbsp;
- <a href="https://rebeccaatwood.com/pages/visit-us" target="_blank">Showroom</a> &nbsp;&nbsp;&nbsp;
- <a href="https://rebeccaatwood.com/pages/contact" target="_blank">Contact Us</a> &nbsp;&nbsp;&nbsp;
- <a href="https://rebeccaatwood.com/cart" target="_blank">Bag </a> &nbsp;&nbsp;&nbsp;
-</div>
-</ul>
 
   </body>
 </html>
